tests/specs/ecosystem/std/archive/0_223_0.test
std/archive/0.223.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/io@^0.223.0": "jsr:@std/io@0.223.0"
    },
    "jsr": {
      "@std/io@0.223.0": {
        "integrity": "2d8c3c2ab3a515619b90da2c6ff5ea7b75a94383259ef4d02116b228393f84f1"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Seeker'.
  /** Constructs a new instance. */ constructor(meta: TarMetaWithLinkName, header: TarHeader, reader: Reader | (Reader & Deno.Seeker)){}
                                                                                                                              ~~~~~~
    at file://<tmpdir>/untar.ts:16:127

error: Type checking failed.

